# gitcy

./: LICENSE  README.md  initial_idea.py  pyproject.toml
git_utils/cli/: ctd_.py
git_utils/core/: commit.py  push.py
gitcy/: __init__.py
gitcy/cli/: __init__.py  ctd_.py  gundo_.py
gitcy/core/: add.py  commit.py  push.py  undo.py
