[tool.poetry]
name = "Gitcy"
version = "1.0.1"
description = "Some usefull gitcommands to make life easier :)"
authors = ["Andreas Hartl-Bachinger <andreas.hartl-bachinger@gmx.at>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gitcy"}]
url="https://github.com/ahartlba/gitcy"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ctd = "git_utils.cli.ctd_:main"